# python-manta

./: .gitignore  .manta-version  404.html  AGENTS.md  BUILDING.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEV_SETUP_FIX.md  MANTA_VERSION_MANAGEMENT.md  MISSING_FEATURES_EVALUATION.md  PRODUCTION_RELEASE_CHECKLIST.md  PROPER_RELEASE_WORKFLOW.md  PYPI_SETUP_GUIDE.md  PYPI_TOKEN_SETUP_SUMMARY.md  README.md  RELEASE_PROCESS.md  RELEASE_QUICK_START.md  RESPAWN_DETECTION_PROPOSAL.md  SHIP_IT.md  TESTPYPI_VERSIONS.md  VERSIONING_AND_CHANGELOG_GUIDE.md  VERSIONING_SETUP_SUMMARY.md  VERSION_SYNC_STRATEGY.md  WHEEL_BUILDING_SETUP.md  build.sh  latest  mkdocs.yml  pyproject.toml  pytest.ini  run_tests.py  setup.py  simple_example.py  sitemap.xml  versions.json
.github/: labeler.yml
.github/workflows/: build-wheels.yml  docs.yml  pr-labels.yml  release-libraries.yml
1.4.5/: 404.html  index.html  sitemap.xml
1.4.5.1/: 404.html  index.html  sitemap.xml
1.4.5.1-dev1/: 404.html  index.html  sitemap.xml
1.4.5.1-dev1/api/: index.html
1.4.5.1-dev1/examples/: index.html
1.4.5.1-dev1/getting-started/: index.html
1.4.5.1-dev1/guides/: index.html
1.4.5.1-dev1/reference/: index.html
1.4.5.1-dev1/search/: search_index.json
1.4.5.1/api/: index.html
1.4.5.1/examples/: index.html
1.4.5.1/getting-started/: index.html
1.4.5.1/guides/: index.html
1.4.5.1/reference/: index.html
1.4.5.2/: 404.html  index.html  sitemap.xml
1.4.5.2.dev10/: 404.html  index.html  sitemap.xml
1.4.5.2.dev10/api/: index.html
1.4.5.2.dev10/examples/: index.html
1.4.5.2.dev10/getting-started/: index.html
1.4.5.2.dev10/guides/: index.html
1.4.5.2.dev10/reference/: index.html
1.4.5.2.dev11/: 404.html  index.html  sitemap.xml
1.4.5.2.dev11/api/: index.html
1.4.5.2.dev11/examples/: index.html
1.4.5.2.dev11/getting-started/: index.html
1.4.5.2.dev11/guides/: index.html
1.4.5.2.dev11/reference/: index.html
1.4.5.2.dev12/: 404.html  index.html  sitemap.xml
1.4.5.2.dev12/api/: index.html
1.4.5.2.dev12/examples/: index.html
1.4.5.2.dev12/getting-started/: index.html
1.4.5.2.dev12/guides/: index.html
1.4.5.2.dev12/reference/: index.html
1.4.5.2.dev12/search/: search_index.json
1.4.5.2.dev5/: 404.html  index.html  sitemap.xml
1.4.5.2.dev5/api/: index.html
1.4.5.2.dev5/examples/: index.html
1.4.5.2.dev5/getting-started/: index.html
1.4.5.2.dev5/guides/: index.html
1.4.5.2.dev6/: 404.html  index.html  sitemap.xml
1.4.5.2.dev7/: 404.html  index.html  sitemap.xml
1.4.5.2.dev8/: 404.html  index.html  sitemap.xml
1.4.5.2.dev9/: 404.html  index.html  sitemap.xml
1.4.5.3/: 404.html  index.html  sitemap.xml
1.4.6.0/: 404.html  index.html  sitemap.xml
1.4.7.2/: 404.html  index.html  sitemap.xml
1.4.7.3/: 404.html  index.html  sitemap.xml
1.4.7.5/: 404.html  index.html  llms-full.txt  sitemap.xml
1.4.7.6/: 404.html  index.html  sitemap.xml
1.5.0.dev0/: 404.html  index.html  sitemap.xml
api/: index.html
dev/: 404.html  index.html  sitemap.xml
docs/: examples.md  getting-started.md  index.md
examples/: basic_usage.py  draft_example.py  index.html  raw_draft_test.py  universal_test.py
getting-started/: index.html
go_wrapper/: callbacks_all.go  callbacks_demo.go  callbacks_dota_all.go  callbacks_entity.go  callbacks_missing.go  data_parser.go  entity_parser.go  go.mod  go.sum  index.go  manta_wrapper.go  parser.go  stream.go  time_utils.go  types.go  universal_parser.go
guides/: index.html
master/: 404.html  index.html  llms.txt  sitemap.xml
reference/: index.html
replays/: .gitignore
scripts/: download_library.py  generate_llms_txt.py
tests/: __init__.py  caching_parser.py  conftest.py  replay_cache.py  test_advanced_features.py  test_convenience.py  test_edge_cases.py  test_go_parity.py  test_models.py  test_parser.py  test_v2_parser.py
tools/: before_build_linux.sh  before_build_macos.sh  before_build_windows.sh  prepare_manta.sh  prepare_release.sh  reversion_wheel.py  upgrade_manta_version.sh
(+477 files in other folders)
