[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-manta"
version = "0.0.1-beta.1"
description = "Python interface for the Manta Dota 2 replay parser"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Equilibrium Coach Team", email = "contact@equilibrium-coach.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Go",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["dota2", "replay", "parser", "gaming", "esports", "manta"]
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]
build = [
    "cibuildwheel>=2.16.0",
]

[project.urls]
Homepage = "https://github.com/equilibrium-coach/python-manta"
Repository = "https://github.com/equilibrium-coach/python-manta"
Documentation = "https://python-manta.readthedocs.io/"
"Bug Tracker" = "https://github.com/equilibrium-coach/python-manta/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
python_manta = ["*.so", "*.h"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
