[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-manta"
version = "1.4.5.2"
description = "Python interface for the Manta Dota 2 replay parser"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Equilibrium Coach Team", email = "contact@equilibrium-coach.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Go",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["dota2", "replay", "parser", "gaming", "esports", "manta"]
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]
build = [
    "cibuildwheel>=2.17.0",
]

[project.urls]
Homepage = "https://github.com/DeepBlueCoding/python-manta"
Repository = "https://github.com/DeepBlueCoding/python-manta"
Documentation = "https://deepbluecoding.github.io/python-manta/"
"Bug Tracker" = "https://github.com/DeepBlueCoding/python-manta/issues"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
python_manta = ["*.so", "*.dll", "*.dylib", "*.h"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

